fix: overflow-x on medium screens.

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ body {
   width: 100vw;
   height: 100%;
   background: var(--life-white-color);
+  overflow-x: hidden;
 }
 
 header {
@@ -119,10 +120,11 @@ b {
 
 .game-container > .grid-container {
   height: 100%;
+  width: 95%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin: 35px 15px 35px 15px;
+  margin: 35px auto;
   overflow: hidden;
 }
 
